--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -2,9 +2,10 @@ name: hello-world
 on: push
 jobs:
   my-job:
+  Build:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
       - name: Clone-down
-        uses: actions/checkout@v3 
-        - run: chmod +x ci/build-app.sh && ci/build-app.sh
+        uses: actions/checkout@v3       
+      - run: chmod +x ci/build-app.sh && ci/build-app.sh
